2009-11-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure: Update to Autoconf 2.65.

2009-11-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (GenerateIPTCAttribute): Returned IPTC string
	values were one character too short.

2009-11-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* ltdl/ltdl.c: Update libltdl to 2.2.6b in order to fix security
	issue.  Resolves CVE-2009-3736 as it pertains to GraphicsMagick.

2009-11-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImageCommand): Convolve does not accept
	an argument which looks like a geometry.  Resolves SourceForge
	issue #2890923 "Different handling of -convolve between convert
	and mogrify".

	* coders/mpc.c (ReadMPCImage): is_monochrome and is_grayscale
	flags were not managed properly for the MPC coder.

2009-10-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageInfo): Fix lockup due to hanging in loop
	while parsing malformed sub-image specification (SourceForge issue
	2886560).

	* coders/jpeg.c (ReadJPEGImage): Fix image scaling when used with
	IJG JPEG library version 7.

2009-10-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/STL.cpp, Magick++/lib/Magick++/STL.h (shadeImage):
	ShadeImage was the result of a botched cut-and-paste.  Corrected
	now.  Thanks to Jukka Manner for making me aware of this.

2009-10-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/xwindow.c (MagickXMakeImage): If image is TrueColor and
	has an opacity channel, then render it on top of a grid image.

	* magick/image.c (TextureImage): Remove matte channel if texture
	is rendered under image.

2009-10-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/xwindow.c (MagickXMakeImage): Fix for CVE-2009-1882
	"Integer overflow in the XMakeImage function".  The problem is
	that the shared memory segment allocated may be smaller than the